--- a/404.html
+++ b/404.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <head>
+           a {
+          font-size: x-large;
+        }
    <h1>404. that's an error.<br><h1>
       <p>make sure ou typed in the correct url.<p>
     <head>
