--- a/404.html
+++ b/404.html
@@ -4,6 +4,6 @@
           font-size: x-large;
         }
    <h1>404. that's an error.<br><h1>
-      <p>make sure ou typed in the correct url.<p>
+      <p>make sure you typed in the correct url.<p>
     <head>
    <html>
