--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -115,14 +117,14 @@
       </div>
 
         <div class="icons w3-padding">
-          <a href="#" target="_blank">
-            <i data-feather="facebook"></i>
+          <a href="https://facebook.com/yourfacebooknamehere" target="_blank">
+            <i data-feather="facebook">facebook</i>
           </a>
-          <a href="#" target="_blank">
-            <i data-feather="instagram"></i>
+          <a href="https://linkedin.com/yourorganisationornamehere" target="_blank">
+            <i data-feather="linkedin">linkedin</i>
           </a>
-          <a href="#" target="baller">
-            <i data-feather="linkedin"></i>
+          <a href="https://twitter.com/yourtwitterhandle" target="_blank">
+            <i data-feather="twitter">twitter</i>
           </a>
         </div>
 
@@ -130,12 +132,12 @@
       <div class="links-container">
         <a href="#" class="w3-button w3-round link border" target="_blank">恐ろしいサイト!</a>
         <a href="#" class="w3-button w3-round link border" target="_blank"></a>
-                <a href="redirectobitly.html" class="w3-button w3-round link border" target="_blank">bit.ly</a>
+                <a href="#" class="w3-button w3-round link border" target="_blank">blank</a>
         <a href="#" class="w3-button w3-round link border" target="_blank"></a>
-        <a href="#" class="w3-button w3-round link border" target="_blank"></a>
-        <a href="#" class="w3-button w3-round link border" target="_blank">受賞した賞</a>
+        <a href="tic-tac-toe.html" class="w3-button w3-round link border" target="_blank">tic-tac-toe</a>
         <a href="#" class="w3-button w3-round link border" target="_blank"></a>
       <a href="read-me.html" class="w3-button w3-round link border" target="_blank">私を読んでください！</a>
-     <a href="#" class="w3-button w3-round link border" target="_blank"></a>                     
+     <a href="#" class="w3-button w3-round link border" target="_blank"></a>
+      </div>
  </body>  
 </html>
