--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
 
       <!-- Links section 1 -->
       <div class="links-container">
-        <a href="#" class="w3-button w3-round link border" target="_blank">ここにあなたのテキスト</a>
+        <a href="awards.html" class="w3-button w3-round link border" target="_blank">awards</a>
         <a href="#" class="w3-button w3-round link border" target="_blank"></a>
-        <a href="#" class="w3-button w3-round link border" target="_blank">ここにあなたのテキスト</a>
+        <a href="#" class="w3-button w3-round link border" target="_blank">blog</a>
         <a href="#" class="w3-button w3-round link border" target="_blank"></a>
         <a href="tic-tac-toe.html" class="w3-button w3-round link border" target="_blank">tic-tac-toe</a>
         <a href="#" class="w3-button w3-round link border" target="_blank"></a>
-      <a href="read-me.html" class="w3-button w3-round link border" target="_blank">私を読んでください！</a>
+      <a href="read-me.html" class="w3-button w3-round link border" target="_blank">read me!</a>
      <a href="#" class="w3-button w3-round link border" target="_blank"></a>
       </div>
  </body>  
