english translations and addons
Signed-off-by: Ronikusu Arawaka <124932615+Ronikusu@users.noreply.github.com>

--- a/awards.html
+++ b/awards.html
@@ -130,7 +130,8 @@
             <i data-feather="linkedin"></i>
           </a>
         </div>
-      <h5>私が持っているすべての報酬はここにリストしたくありません. ごめん！<h5>
+      <h5>header<h5>
+     <p>your awards here<p>
     
  </body>
  <html>
