--- a/read-me.html
+++ b/read-me.html
@@ -116,7 +116,7 @@
       <!-- Image and name container -->
       <div class="w3-margin-top" style="text-align: center">
         <div class="image w3-round"></div>
-        <p class="profession"><span class="w3-padding w3-margin w3-round border" style="font-weight: bolder;">重要!</span></p><br>
+        <p class="profession"><span class="w3-padding w3-margin w3-round border" style="font-weight: bolder;">read me!</span></p><br>
       </div>
 
         <div class="icons w3-padding">
