--- a/404.html
+++ b/404.html
@@ -1,9 +1,7 @@
 <!doctype html>
 <head>
-           a {
-          font-size: x-large;
-        }
    <h1 style="font-family: Arial">404. that's an error.<br><h1>
       <p style="font-family: Arial">make sure you typed in the correct url.<p>
+         <p>think this is a mistake? Check out 404 in the wiki.<p>
     <head>
    <html>
