--- a/404.html
+++ b/404.html
@@ -1,5 +1,9 @@
 <!doctype html>
 <head>
+<style>
+h1 {color:dark_gray;}
+p {color:gray;}
+</style>
    <h1 style="font-family: Arial">404. that's an error.<br><h1>
       <p style="font-family: Arial">make sure you typed in the correct url.<p>
          <p>think this is a mistake? Check out 404 in the wiki.<p>
