--- a/awards.html
+++ b/awards.html
@@ -118,18 +118,7 @@
         <div class="image w3-round"></div>
         <p class="profession"><span class="w3-padding w3-margin w3-round border" style="font-weight: bolder;">賞!!!!</span></p><br>
       </div>
-
-        <div class="icons w3-padding">
-          <a href="#" target="_blank">
-            <i data-feather="facebook"></i>
-          </a>
-          <a href="#" target="_blank">
-            <i data-feather="instagram"></i>
-          </a>
-          <a href="#" target="baller">
-            <i data-feather="linkedin"></i>
-          </a>
-        </div>
+      <p>text here<p>
       <h5>私が持っているすべての報酬はここにリストしたくありません. ごめん！<h5>
     
  </body>
