added awards button
Signed-off-by: Ronikusu Arawaka <124932615+Ronikusu@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
 
       <!-- Links section 1 -->
       <div class="links-container">
-        <a href="#" class="w3-button w3-round link border" target="_blank">ここにあなたのテキスト</a>
+        <a href="" class="w3-button w3-round link border" target="_blank">リンクテキストはこちら</a>
         <a href="#" class="w3-button w3-round link border" target="_blank"></a>
-        <a href="#" class="w3-button w3-round link border" target="_blank">ここにあなたのテキスト</a>
+        <a href="awards.html" class="w3-button w3-round link border" target="_blank">賞</a>
         <a href="#" class="w3-button w3-round link border" target="_blank"></a>
         <a href="tic-tac-toe.html" class="w3-button w3-round link border" target="_blank">tic-tac-toe</a>
         <a href="#" class="w3-button w3-round link border" target="_blank"></a>
