--- a/eng/index.html
+++ b/eng/index.html
@@ -132,7 +132,7 @@
       <div class="links-container">
         <a href="awards.html" class="w3-button w3-round link border" target="_blank">awards</a>
         <a href="#" class="w3-button w3-round link border" target="_blank"></a>
-        <a href="#" class="w3-button w3-round link border" target="_blank">blog</a>
+        <a href="" class="w3-button w3-round link border" target="_blank">blog</a>
         <a href="#" class="w3-button w3-round link border" target="_blank"></a>
         <a href="tic-tac-toe.html" class="w3-button w3-round link border" target="_blank">tic-tac-toe</a>
         <a href="#" class="w3-button w3-round link border" target="_blank"></a>
