--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -1,4 +1,4 @@
- <title>Tic Tac Toe</title>
+ <title○×ゲーム</title>
 <meta charset="UTF-8" />
 
 <style>
@@ -47,7 +47,7 @@
   </tr>
 </table>
 
-<h2 hidden>Game over</h2>
+<h2 hidden>ゲームオーバー -^-</h2>
 
 <script>
   // Initialization
